--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
     <h3>Let me give you some advice.</h3>
     <div>Input Kcal for a meal</div>
     <form action="findMealsServlet" method="get">
-        <input type="text" id="txtKcal" name="txtKcal"/>
+        <input type="text" id="txtKcal" name="txtKcal"/>Kcal<br/>
         Divide into:
         <span id="cbMealsDivided">3</span> meal(s)
         <br/>
@@ -97,6 +97,7 @@
         </li>
     </ul>
 </div>
+<div style="width: 100%; float: left;">
 <div class="list-category-layout">
     <ul id="list-category">
         <li>
@@ -119,6 +120,7 @@
         </li>
     </ul>
 </div>
+
 <div class="list-recipes-layout">
     <ul id="list-recipes">
         <li>
@@ -202,6 +204,7 @@
             </a>
         </li>
     </ul>
+</div>
 </div>
 </body>
 <footer></footer>
