--- a/web/index.html
+++ b/web/index.html
@@ -37,10 +37,10 @@
                 <label for="rdFemale">Female<label>
             </li>
             <li>
-                Height: <input type="text" name="txtHeight" id="txtHeight">
+                Height: <input type="text" name="txtHeight" id="txtHeight"> cm
             </li>
             <li>
-                Weight: <input type="text" name="txtWeight" id="txtWeight"><br/>
+                Weight: <input type="text" name="txtWeight" id="txtWeight"> kg<br/>
             </li>
             <li>
                 Age: <input type="text" name="txtAge" id="txtAge"><br/>
@@ -99,6 +99,7 @@
 </div>
 <div style="width: 100%; float: left;">
 <div class="list-category-layout">
+    <h2>Category</h2>
     <ul id="list-category">
         <li>
             <a>All</a>
